--- a/mobile-app-ws/pom.xml
+++ b/mobile-app-ws/pom.xml
@@ -42,6 +42,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
