--- a/PhotoAppDiscoveryService/src/main/resources/application.properties
+++ b/PhotoAppDiscoveryService/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8010
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+spring.application.name=discovery-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
