Initialize accounts microservice

--- a/PhotoAppApiAcountManagement/src/main/resources/application.properties
+++ b/PhotoAppApiAcountManagement/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-#automactically assign ports
 server.port=0
-spring.application.name=users-ws
+spring.application.name=accounts-ws
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
 spring.devtools.restart.enabled=true
-
