--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -5,3 +5,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
 spring.devtools.restart.enabled=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+#h2 database
+spring.h2.console.enabled=true
+
+#h2 has built in firewall. we need to enable conenction from other addresses
+spring.h2.console.settings.web-allow-others=true
