added functionality to accepts requets only from certain ip- In this case zuul api gateway.commented it coz not sure what ip to put
http.authorizeRequests().antMatchers("/**").hasIpAddress(env.getProperty("gateway.ip"));

--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.h2.console.enabled=true
 
 #h2 has built in firewall. we need to enable conenction from other addresses
 spring.h2.console.settings.web-allow-others=true
+
+gateway.ip=localhost
