modify  restrict requests to users microservice only from zuul api gateway. can find ip in eureka discovery server dashboard

--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.h2.console.enabled=true
 #h2 has built in firewall. we need to enable conenction from other addresses
 spring.h2.console.settings.web-allow-others=true
 
-gateway.ip=localhost
+gateway.ip=192.168.1.130
