--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 
 gateway.ip=192.168.1.130
+
+token.expiration_time=2000000
+token.secret=eqeqehrhhr
