add spring security to zuul api gateway. allow certain requets to access without having authorization token in the header like user registration user login h2-console

--- a/PhotoAppApiZuulGateway/src/main/resources/application.properties
+++ b/PhotoAppApiZuulGateway/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=zuul
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
 spring.devtools.restart.enabled=true
 
+api.h2-console.url.path=/h2-console
+api.registration.url.path=/users-ws/users
+api.login.path.url=/users-ws/login
