--- a/PhotoAppApiZuulGateway/src/main/resources/application.properties
+++ b/PhotoAppApiZuulGateway/src/main/resources/application.properties
@@ -5,4 +5,9 @@ spring.devtools.restart.enabled=true
 
 api.h2-console.url.path=/h2-console
 api.registration.url.path=/users-ws/users
-api.login.path.url=/users-ws/login
+api.login.path.url=/users-ws/users/login
+
+authorization.token.header.name=Authorization
+authorization.token.header.prefix=Bearer
+
+token.secret=eqeqehrhhr
