--- a/PhotoAppApiConfigServer/src/main/resources/application.properties
+++ b/PhotoAppApiConfigServer/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8012
 spring.application.name=PhotoAppConfigServer
+
+spring.cloud.config.server.git.url=https://github.com/verangade/PhotoAppConfiguration
+spring.cloud.config.server.git.username=verangade
+spring.cloud.config.server.git.password=moon1216
+spring.cloud.config.server.git.clone-on-startup=true
