--- a/PhotoAppApiUsers/pom.xml
+++ b/PhotoAppApiUsers/pom.xml
@@ -69,6 +69,11 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 
 
 		<dependency>
