--- a/PhotoAppApiUsers/src/main/resources/bootstrap.properties
+++ b/PhotoAppApiUsers/src/main/resources/bootstrap.properties
@@ -1,2 +1,4 @@
+#configuration properties in this file will be loaded before the brean creation happens
+
 spring.cloud.config.uri=http://localhost:8012
 spring.cloud.config.name=PhotoAppConfigServer
