add spring boot actuator to config server add spring boot cloud bus to all microservices
add rabbit mq property
add bootstrap property file

now when something updates in remote repo config server will pull those
updates

we need to call actuator/bus-refresh command to tell config server to
broad cast those changes to every microservices

--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -16,3 +16,8 @@ gateway.ip=192.168.1.130
 token.expiration_time=2000000
 token.secret=eqeqehrhhr
 login.url.path=/users/login
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
