--- a/PhotoAppApiConfigServer/src/main/resources/application.properties
+++ b/PhotoAppApiConfigServer/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 server.port=8012
 spring.application.name=PhotoAppConfigServer
 
-spring.cloud.config.server.git.url=https://github.com/verangade/PhotoAppConfiguration
-spring.cloud.config.server.git.username=verangade
-spring.cloud.config.server.git.password=moon1216
+spring.cloud.config.server.git.uri=https://github.com/verangade/PhotoAppConfiguration
+spring.cloud.config.server.git.username=verangades@gmail.com
+spring.cloud.config.server.git.password=gitra910528de8/
 spring.cloud.config.server.git.clone-on-startup=true
+
+management.endpoints.web.exposure.include=bus-refresh
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
