--- a/PhotoAppApiZuulGateway/src/main/resources/application.properties
+++ b/PhotoAppApiZuulGateway/src/main/resources/application.properties
@@ -11,3 +11,8 @@ authorization.token.header.name=Authorization
 authorization.token.header.prefix=Bearer
 
 token.secret=eqeqehrhhr
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
