create properties that specific to users-ws microservice

--- a/PhotoAppApiConfigServer/src/main/resources/application.properties
+++ b/PhotoAppApiConfigServer/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8012
 spring.application.name=PhotoAppConfigServer
 
+spring.profiles.active=native
+spring.cloud.config.server.native.search-locations=file:///C://Projects//MyProjects//NewConfiguration
+
 spring.cloud.config.server.git.uri=https://github.com/verangade/PhotoAppConfiguration
 spring.cloud.config.server.git.username=verangades@gmail.com
 spring.cloud.config.server.git.password=gitra910528de8/
