--- a/PhotoAppApiUsers/src/main/resources/bootstrap.properties
+++ b/PhotoAppApiUsers/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 #configuration properties in this file will be loaded before the bean creation happens
 
 spring.cloud.config.uri=http://localhost:8012
-spring.cloud.config.name=PhotoAppConfigServer
+#spring.cloud.config.name=PhotoAppConfigServer
+spring.cloud.config.name=users-ws
