enable spring boot actuator in zuul api gateway

--- a/PhotoAppApiZuulGateway/src/main/resources/application.properties
+++ b/PhotoAppApiZuulGateway/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+#actuator end points
+#https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-features.html
+
+management.endpoints.web.exposure.include=beans,health,routes,httptrace
+api.zuul.actuator.url.path=/actuator/*
