--- a/PhotoAppApiZuulGateway/src/main/resources/application.properties
+++ b/PhotoAppApiZuulGateway/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.rabbitmq.password=guest
 
 management.endpoints.web.exposure.include=beans,health,routes,httptrace
 api.zuul.actuator.url.path=/actuator/*
+
+api.users.actuator.url.path=/users-ws/actuator/*
