--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -11,8 +11,13 @@ spring.h2.console.enabled=true
 #h2 has built in firewall. we need to enable conenction from other addresses
 spring.h2.console.settings.web-allow-others=true
 
-#gateway.ip=192.168.1.130
-gateway.ip=10.70.150.211
+spring.datasource.url=jdbc:mysql://localhost:3306/photo_app?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=abc@123
+spring.jpa.hibernate.ddl-auto=update
+
+gateway.ip=192.168.1.130
+#gateway.ip=10.70.150.211
 
 token.expiration_time=2000000
 token.secret=eqeqehrhhr
