--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 management.endpoints.web.exposure.include=mappings
+
+logging.level.com.raveesoft.photoapp.api.users.data.AlbumServiceClient=DEBUG
