Add hystrix breaker @EnableCircuitBreaker
@FeignClient(name="albums-ws",fallback=AlbumFallback.class)
public interface AlbumServiceClient {

--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -16,7 +16,8 @@ spring.datasource.username=root
 spring.datasource.password=abc@123
 spring.jpa.hibernate.ddl-auto=update
 
-gateway.ip=192.168.1.130
+#gateway.ip=192.168.1.130
+gateway.ip=192.168.1.115
 #gateway.ip=10.70.150.211
 
 token.expiration_time=2000000
@@ -31,3 +32,5 @@ spring.rabbitmq.password=guest
 management.endpoints.web.exposure.include=mappings
 
 logging.level.com.raveesoft.photoapp.api.users.data.AlbumServiceClient=DEBUG
+
+feign.hystrix.enabled=true
