--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -34,3 +34,9 @@ management.endpoints.web.exposure.include=mappings
 logging.level.com.raveesoft.photoapp.api.users.data.AlbumServiceClient=DEBUG
 
 feign.hystrix.enabled=true
+
+spring.zipkin.base-url=http://localhost:9411
+#mehod to send data to zipkin
+spring.zipkin.sender.type=web
+#percentage of information to be sent to zipkin server 1 means 100%
+spring.sleuth.sampler.probability=1
