--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -40,3 +40,5 @@ spring.zipkin.base-url=http://localhost:9411
 spring.zipkin.sender.type=web
 #percentage of information to be sent to zipkin server 1 means 100%
 spring.sleuth.sampler.probability=1
+
+logging.file.name=users-ws.log
