pushing changes. add changes to file locations - because now use linux machine

--- a/PhotoAppApiConfigServer/src/main/resources/application.properties
+++ b/PhotoAppApiConfigServer/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=8012
 spring.application.name=PhotoAppConfigServer
 
 spring.profiles.active=native
-spring.cloud.config.server.native.search-locations=file:///C://Projects//MyProjects//NewConfiguration
+#spring.cloud.config.server.native.search-locations=file:///C://Projects//MyProjects//NewConfiguration
+spring.cloud.config.server.native.search-locations=file:///home/raveera/MicroService_configurations
 
 spring.cloud.config.server.git.uri=https://github.com/verangade/PhotoAppConfiguration
 spring.cloud.config.server.git.username=verangades@gmail.com
