--- a/PhotoAppApiConfigServer/src/main/resources/bootstrap.properties
+++ b/PhotoAppApiConfigServer/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 #encrypt.key=31hgiyuiiccfn992hdjkn
 
-encrypt.key-store.location=file:///C://Projects//MyProjects//GeneratedKeys//apiENcryptionKeys.jks
+encrypt.key-store.location=file:///home/raveera/Generated_keys/apiENcryptionKeys.jks
 encrypt.key-store.password=123rifjj
 encrypt.key-store.alias=apiEncryptKey
