--- a/PhotoAppApiZuulGateway/src/main/resources/application.properties
+++ b/PhotoAppApiZuulGateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8011
 spring.application.name=zuul
-eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
 spring.devtools.restart.enabled=true
 
 api.h2-console.url.path=/h2-console
